[project]
name = "gloveplaylistmaker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.13.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.9",
    "mutagen>=1.47.0",
    "numpy>=2.4.4",
    "pydub",
    "pyqt6>=6.11.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
pydub = { git = "https://github.com/devoreni/pydub-escape-fix" }
